# covise

./: .SRCINFO  .gitignore  CMakeLists.txt  PKGBUILD  README.md  covise.desktop
.github/workflows/: cmake.yml  release.yml  release_arch.yml
cmake/: FindOpenCV.cmake
config/plugin/: EnergyCampus.toml
deploy/arch/: .SRCINFO  PKGBUILD
share/covise/materials/: EnergyGrid.xml  EnergyGrid_Line_BACKUP.xml  EnergyGrid_Point.xml  MapColorsHeightmapGeometry.glsl
src/OpenCOVER/: CMakeLists.txt.user.4.10-pre1  CMakeLists.txt.user.4.9-pre1
src/OpenCOVER/DrivingSim/oddlot/src/graph/editors/: signaleditor.cpp
src/OpenCOVER/DrivingSim/oddlot/src/tree/: signaltreewidget.cpp  signaltreewidget.hpp
src/OpenCOVER/HTTPClient/: CMakeLists.txt
src/OpenCOVER/HTTPClient/GraphQL/: CMakeLists.txt  graphql.cpp  graphql.h
src/OpenCOVER/HTTPClient/GraphQL/core/: export.h  field.h  mutation.h  query.cpp  query.h  scalar.h  subscription.h  type.cpp  type.h
src/OpenCOVER/PluginUtil/: coColorMap.cpp  coColorMap.h
src/OpenCOVER/plugins/general/Annotation/: CMakeLists.txt
src/OpenCOVER/plugins/general/Annotation/lib/: CMakeLists.txt  graphql.cpp  graphql.h  schema.json
src/OpenCOVER/plugins/general/Annotation/lib/core/: field.h  mutation.h  query.cpp  query.h  scalar.h  subscription.h  type.cpp  type.h
src/OpenCOVER/plugins/general/Variant/: CMakeLists.txt  Variant.cpp  VariantAR.cpp  VariantAR.h  VariantPlugin.cpp  VariantPlugin.h  VariantUI.cpp  VariantUI.h
src/OpenCOVER/plugins/general/WindowTypeQt/: QtOsgWidget.cpp
src/OpenCOVER/plugins/hlrs/: CMakeLists.txt
src/OpenCOVER/plugins/hlrs/Energy/: CMakeLists.txt  Energy.cpp  Energy.h
src/OpenCOVER/plugins/hlrs/Energy/app/: CityGMLSystem.h  Energy.cpp  Energy.h  SimulationSystem.cpp  SimulationSystem.h
src/OpenCOVER/plugins/hlrs/Energy/app/presentation/: CityGMLBuilding.cpp  EnergyGrid.cpp  EnergyGrid.h  grid.cpp  grid.h
src/OpenCOVER/plugins/hlrs/Energy/app/ui/citygml/: CityGMLDeviceSensor.cpp  CityGMLDeviceSensor.h
src/OpenCOVER/plugins/hlrs/Energy/app/ui/ennovatis/: EnnovatisDevice.cpp  EnnovatisDevice.h  EnnovatisDeviceSensor.h
src/OpenCOVER/plugins/hlrs/Energy/app/ui/simulation/: BaseSimulationUI.h  HeatingSimulationUI.h  PowerSimulationUI.h
src/OpenCOVER/plugins/hlrs/Energy/core/: EnergyGrid.cpp  EnergyGrid.h  TxtInfoboard.cpp  TxtInfoboard.h  grid.cpp  grid.h
src/OpenCOVER/plugins/hlrs/Energy/core/interfaces/: IEnergyGrid.h
src/OpenCOVER/plugins/hlrs/Energy/core/utils/: osgUtils.cpp  osgUtils.h
src/OpenCOVER/plugins/hlrs/Energy/lib/: CMakeLists.txt
src/OpenCOVER/plugins/hlrs/Energy/lib/apache/: CMakeLists.txt
src/OpenCOVER/plugins/hlrs/Energy/lib/core/: CMakeLists.txt  grid.h
src/OpenCOVER/plugins/hlrs/Energy/lib/core/interfaces/: IEnergyGrid.h
src/OpenCOVER/plugins/hlrs/Energy/lib/core/simulation/: heating.cpp  heating.h  object.h  power.cpp  power.h  simulation.cpp  simulation.h
src/OpenCOVER/plugins/hlrs/Energy/test/: CMakeLists.txt
src/OpenCOVER/plugins/markertracking/ARUCO/: ARUCOTrackerPlugin.cpp  ARUCOTrackerPlugin.h
src/OpenCOVER/plugins/ukoeln/PointRayTracer/: PointRayTracerDrawable.cpp
src/OpenCOVER/utils/read/csv/: csv.cpp
src/kernel/config/kernel/: coConfigConstants.cpp  coConfigImportReader.cpp
src/kernel/util/: environment.cpp
src/sys/vrb/gui/: VRBapplication.cpp
src/tools/Revit/OpenFOAM/: CMakeLists.txt
src/tools/Revit/OpenFOAM/BIM/: Data.cs  OpenFOAMFileProcessor.cs  OpenFOAMInterfaceApp.cs  OpenFoamSimulateCommand.cs
src/tools/Revit/OpenFOAM/BIM/OpenFOAM/: ControlDict.cs
src/tools/Revit/OpenFOAM/BIM/Resources/: blockMeshDict  controlDict  decomposeParDict  fvSchemes  fvSolution  snappyHexMeshDict  surfaceFeatureExtractDict
src/tools/comote/: MainWidget.cpp  MainWindow.h
(+10 files in other folders)
